--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,12 @@
     user-select: none;
 }
 p{
-    font-size: 1rem;
+    font-size: 1em;
 }
 body{
     color: var(--text-color);
     font-family: 'Abel', sans-serif;
+    width: 100%;
     height: 100%;
     background: var(--color-primary);
 }
@@ -57,9 +58,9 @@ a:hover{
 header{
     width: 100%;
     height: 10vh;
-    padding: 0px 30px;
-    user-select: none;
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     position: fixed;
     top: 0;
     left: 0;
@@ -67,32 +68,26 @@ header{
     overflow: hidden;
     background: var(--color-primary);
 }
-.nav-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    top: 30%;
-    padding: 0px 20px;
-}
 .logo{
-    color: var(--text-color);
-    font-size: 20px;
-    font-weight: 600;
-    letter-spacing: 2px;
+    height: 60px;
+}
+.toogle{
+    display: none;
 }
 .nav-list{
+    width: 600px;
+}
+.nav-list, ol, ul{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: auto;
-}
-.nav-list ol{
-    display: flex;
+    flex-direction: row;
+    padding-top: 10px;
     font-family: 'Abel', sans-serif;
 }
-.nav-list-social{
-    display: flex;
+ol, ul{
+    height: 22px;
+    overflow: hidden;
 }
 .nav-list ol > li{
     margin-left: 34px;
@@ -102,7 +97,7 @@ header{
 }
 /* animate icon */
 .nav-list-social {
-    overflow: hidden;
+    text-align: center;
     margin-left: 12px;
 }
 .nav-list-social li{
@@ -201,23 +196,52 @@ ul > li{
           filter: blur(12px) opacity(0%);
     }
 }
-  
-.btn-cv{
-    text-align: center;
-    width: 100px;
-    margin-left: 15px;
-    padding: 10px;
-    border: 1px solid var(--color-secundary);
-    border-radius: 4px;
-}
-.btn-cv:hover{
-    text-decoration: none;
+
+.btn-animado{
+    position: relative;
+    display: inline-block;
+    border: 2px solid var(--color-secundary);
     color: var(--text-color);
-    background: var(--back-yellow-light); 
-    transition: 0.60s;  
-    user-select: none;
-    cursor: pointer;
+    top: 0;
+    left: 0;
+    padding: 5px 15px;
+    letter-spacing: 2px;
 }
+.btn-animado:before{
+    content: '';
+    position: absolute;
+    top: 4px;
+    left: -3px;
+    width: calc(100% + 6px);
+    height: calc(100% - 7px);
+    background: var(--color-primary);
+    transition: 0.5s ease-in-out;
+    transform: scaleY(1);
+    transition-delay: 0.5s;
+}
+.btn-animado:hover::before{
+    transform: scaleY(0);
+}
+.btn-animado::after{
+    content: '';
+    position: absolute;
+    left: 4px;
+    top: -3px;
+    height: calc(100% + 6px);
+    width: calc(100% - 7px);
+    background: var(--color-primary);
+    transition: 0.5s ease-in-out;
+    transform: scaleX(1);
+}
+.btn-animado:hover::after{
+    transform: scaleX(0);
+    background: var(--back-yellow-light);
+}
+.btn-animado a{
+    position: relative;
+    z-index: 2;
+}
+
 /* imagens de mim */
 .profile-foto{
     width: 300px;
@@ -292,7 +316,7 @@ ul > li{
     align-items: center;
     justify-content: center;
 }
-.btn-arquive{
+/*.btn-arquive{
     color: var(--text-color-light);
     width: 200px;
     height: 40px;
@@ -301,11 +325,7 @@ ul > li{
     border-radius: 4px;
     background: none;
 }
-.btn-arquive:hover{
-    background: var(--back-yellow-light);
-    transition: 0.60s;
-}
-/* contato */
+ contato */
 #contact-area{
     width: 70%;
     height: 260px;
@@ -327,9 +347,75 @@ footer{
     text-align: center;
 }
 @media only screen and (max-width: 768px){
+    header{
+        overflow: visible;
+    }
     .big-heading{
         font-size: 30px;
     }  
+    .nav-list{
+        position: fixed;
+        z-index: 1000;
+        --gap: 6em;
+        inset: 0 0 0 30%;
+        flex-direction: column;
+        padding: min(30vh, 10rem) 2em;
+        background: hsl(0, 0%, 100%, 0.1);
+        backdrop-filter: blur(1rem);
+        transform: translateX(100%);
+    }
+    .nav-list ol > li{
+        font-size: 1.3em;
+    }
+    .nav-list .nav-ol-list{
+        flex-direction: column;
+    }
+    .nav-list [data-visible="true"]{
+        transform: translateX(0%);
+    }
+    .toggle{
+        position: relative;
+        width: 80px;
+        height: 80px;
+        z-index: 9999;
+        background: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        overflow: hidden;
+    }
+    .toggle span{
+        position: absolute;
+        width: 40px;
+        height: 4px;
+        border-radius: 5px;
+        background: var(--back-yellow-light);
+        transition: 0.5s;
+    }
+    .toggle span:nth-child(1){
+        transform: translateY(-15px);
+        width: 25px;
+        left: 15px;
+    }
+    .toggle.active span:nth-child(1){
+        width: 50px;
+        transform: translateY(0) rotate(45deg); 
+        transition-delay: 0.125s;
+    }
+    .toggle span:nth-child(2){
+        transform: translateY(15px);
+        width: 15px;
+        left: 15px;
+    }
+    .toggle.active span:nth-child(2){
+        width: 50px;
+        transform: translateY(0) rotate(310deg); 
+        transition-delay: 0.45s;
+    }
+    .toggle.active span:nth-child(3){
+        transform: translateX(60px);
+    }
     #main{
         margin-top: 30%;
     }
@@ -349,6 +435,9 @@ footer{
     }
 }
 @media (max-width: 35em){
+    header{
+        overflow: visible;
+    }
     .big-heading{
         font-size: 20px;
     }
@@ -356,12 +445,12 @@ footer{
         position: fixed;
         z-index: 1000;
         --gap: 6em;
-
         inset: 0 0 0 30%;
         flex-direction: column;
         padding: min(30vh, 10rem) 2em;
         background: hsl(0, 0%, 100%, 0.1);
         backdrop-filter: blur(1rem);
+        transform: translateX(100%);
     }
     .nav-list ol > li{
         font-size: 1.3em;
@@ -369,14 +458,51 @@ footer{
     .nav-list .nav-ol-list{
         flex-direction: column;
     }
-    .mobile-nav-toggle{
-        position: absolute;
+    .nav-list [data-visible="true"]{
+        transform: translateX(0%);
+    }
+    .toggle{
+        position: relative;
+        width: 80px;
+        height: 80px;
         z-index: 9999;
-        background: red;
-        width: 1rem;
-        aspect-ratio: 1; /* Apontado para lembrar */
-        top: 2rem;
-        right: 1rem;
+        background: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        overflow: hidden;
+    }
+    .toggle span{
+        position: absolute;
+        width: 40px;
+        height: 4px;
+        border-radius: 5px;
+        background: var(--back-yellow-light);
+        transition: 0.5s;
+    }
+    .toggle span:nth-child(1){
+        transform: translateY(-15px);
+        width: 25px;
+        left: 15px;
+    }
+    .toggle.active span:nth-child(1){
+        width: 50px;
+        transform: translateY(0) rotate(45deg); 
+        transition-delay: 0.125s;
+    }
+    .toggle span:nth-child(2){
+        transform: translateY(15px);
+        width: 15px;
+        left: 15px;
+    }
+    .toggle.active span:nth-child(2){
+        width: 50px;
+        transform: translateY(0) rotate(310deg); 
+        transition-delay: 0.45s;
+    }
+    .toggle.active span:nth-child(3){
+        transform: translateX(60px);
     }
     #main{
         margin-bottom: 40%;
