--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
     user-select: none;
 }
 p{
-    font-size: 1em;
+    font-size: 1.em;
 }
 body{
     color: var(--text-color);
@@ -66,7 +66,9 @@ header{
     left: 0;
     z-index: 9;
     overflow: hidden;
-    background: var(--color-primary);
+    background: rgba(255, 255, 255, 0);
+    backdrop-filter: blur(0.9em);
+    -webkit-backdrop-filter: blur(0.9em);
 }
 .logo{
     height: 60px;
@@ -151,12 +153,6 @@ ul > li{
 }
 #main{
     margin-top: 10%;
-}
-.content-columns{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
 }
 /* sections */
 #main, #about, #works{
@@ -266,6 +262,15 @@ ul > li{
     margin-right: auto;
 }
 /* projetos */
+.content-columns{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border: 1px solid red;
+}
 .project-body{
     width: 360px;
     height: 300px;
