--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     box-sizing: border-box;
     user-select: none;
+    cursor: url(cursor.png), pointer;
 }
 p{
     font-size: 19px;
@@ -15,7 +16,9 @@ body{
     width: 100%;
     height: 100%;
     background: var(--color-primary);
-    cursor: url(cursor.png), pointer;
+}
+main{
+    padding: 0px 100px;
 }
 /* Barra de rolagem */
 body::-webkit-scrollbar {
@@ -42,7 +45,7 @@ body::-webkit-scrollbar-corner {
 }
 :root{
     --color-secundary: #fabd21;
-    --color-primary: rgb(23, 23, 23);
+    --color-primary: hsl(0, 0%, 9%);
     --text-color: #ffff;
     --text-color-light: rgb(216, 216, 216);
     --back-yellow-light: rgba(250, 188, 33, 0.562);
@@ -52,6 +55,7 @@ body::-webkit-scrollbar-corner {
 a{
     color: var(--text-color);
     text-decoration: none;
+    cursor: url(hammer.png), pointer;
 }
 a:hover{
     color: var(--text-color);
@@ -203,7 +207,6 @@ ul > li{
     left: 0;
     padding: 5px 15px;
     letter-spacing: 2px;
-    cursor: url(hammer.png), pointer;
 }
 .btn-animado:before{
     content: '';
@@ -290,70 +293,50 @@ ul > li{
     font-size: 1.8rem;
     width: 100%;
 }
-.title-center{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+/* Conhecimentos */
+.box-conhecimento{
+    width: 250px;
+    height: 150px;
+    margin-left: 15px;
+    background: var(--color-primary);
 }
-/* projetos */
-.content-columns{
-    width: 100%;
+.box-conhecimento i{
+    color: #fabd21;
+    font-size: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border: 1px solid red;
+    position: relative;
+    top: 15%;
 }
-.project-body{
-    width: 360px;
-    height: 300px;
-    margin: 30px 10px;
-    padding: 10px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 10px;
-    background: rgba(153, 153, 153, 0.103);
+/* projetos */
+#works, #service-area{
+    padding: 44px 0px;
 }
-.project-images{
-    border-radius: 4px;
-    min-width: 300px;
-    height: 40vh;
-}
-.header-list{
-    height: 45px;
-    padding-top: 15px;
-    border-radius: 4px;
-    background: var(--arquive-color);
-}
-.project-list-icons{
+.containerMax{
     display: flex;
-    align-items: right;
-    justify-content: right;
+    align-items: center;
+    justify-content: center;
+    flex-flow: wrap row;
 }
-.project-list-icons li{
-    margin-left: 19px;
-}
-.project-list-icons i{
-    font-size: 20px;
-}
-.project-list-icons i:hover{
-    color: var(--color-secundary);
-    transition: 0.60s;
-}
-.project-body p{
-    color: var(--color-secundary);
-    text-align: center;
+.project-body, .box-service{
+    width: 320px;
+    height: 250px;
+    margin: 10px;
+    padding: 70px 20px;
+    border-radius: 5px;
+    flex-basis: calc(33% -20px);
+    background: rgba(153, 153, 153, 0.048)
 }
 .title-project{
     font-size: 18px;
-    text-align: center;
+    margin-bottom: 20px;
 }
 .btn-links-project{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 20px;
 }
 /*contato */
 #contact-area{
