--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,12 +50,12 @@ body::-webkit-scrollbar-corner {
     --text-color-light: rgb(216, 216, 216);
     --back-yellow-light: rgba(250, 188, 33, 0.562);
     --back-white-light: rgba(255, 255, 255, 0.726);
-    --arquive-color: rgba(153, 153, 153, 0.192);
+    --cor-base: rgba(153, 153, 153, 0.048);
+
 }
 a{
     color: var(--text-color);
     text-decoration: none;
-    cursor: url(hammer.png), pointer;
 }
 a:hover{
     color: var(--text-color);
@@ -294,24 +294,48 @@ ul > li{
     width: 100%;
 }
 /* Conhecimentos */
-.box-conhecimento{
-    width: 250px;
-    height: 150px;
-    margin-left: 15px;
-    background: var(--color-primary);
+.skills-content{
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    flex-direction: row;
+    max-width: 90%;
+    width: 730px;
+    height: 380px;
+    margin: 80px auto;
+    border-radius: 5px;
+    box-shadow: 1px 8px 15px rgba(0, 0, 0, 0.336);
+    background: var(--cor-base);
 }
-.box-conhecimento i{
-    color: #fabd21;
-    font-size: 100px;
+.box-skills{
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-    top: 15%;
+    flex-direction: column;
+    width: auto;
+    height: 300px;
+    margin: 0px 15px;
+}
+.btn-skills{
+    color: var(--text-color);
+    width: 130px;
+    height: 45px;
+    padding: 5px;
+    border: none;
+    background: transparent;
+}
+.btn-skills:nth-child(1).active{
+    border-radius: 3px;
+    background: var(--color-primary);
+}
+.inform-skills{
+    width: 300px;
+    height: 300px;
 }
 /* projetos */
-#works, #service-area{
-    padding: 44px 0px;
+#works, #service-area, #skills-area{
+    margin: 60px 0px;
+    padding: 100px 0px;
 }
 .containerMax{
     display: flex;
@@ -326,7 +350,7 @@ ul > li{
     padding: 70px 20px;
     border-radius: 5px;
     flex-basis: calc(33% -20px);
-    background: rgba(153, 153, 153, 0.048)
+    background: var(--cor-base);
 }
 .title-project{
     font-size: 18px;
@@ -360,6 +384,9 @@ footer{
     text-align: center;
 }
 @media only screen and (max-width: 768px){
+    main{
+        padding: 30px;
+    }
     header{
         overflow: visible;
     }
@@ -448,6 +475,9 @@ footer{
     }
 }
 @media (max-width: 35em){
+    main{
+        padding: 0;
+    }
     header{
         overflow: visible;
     }
