--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,15 +62,14 @@ a:hover{
     text-decoration: none;
 }
 header{
-    width: 100%;
-    height: 10vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 9;
+    z-index: 999;
     overflow: hidden;
     background: rgba(255, 255, 255, 0);
     backdrop-filter: blur(0.9em);
@@ -79,34 +78,26 @@ header{
 .logo{
     height: 60px;
 }
-.toogle{
-    display: none;
-}
 .nav-list{
-    width: 600px;
+    position: relative;
+    top: 6px;
 }
-.nav-list, ol, ul{
+.nav-list, .nav-ol-list{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    padding-top: 10px;
-    font-family: 'Abel', sans-serif;
 }
-ol, ul{
-    height: 22px;
-    overflow: hidden;
+.nav-ol-list a:hover{
+    color: var(--color-secundary);
+    transition: 0.5s;
 }
-.nav-list ol > li{
-    margin-left: 34px;
-}
-.nav-list i{
-    font-size: 18px;
+.nav-ol-list li{
+    margin-left: 30px;
 }
 /* animate icon */
-.nav-list-social {
+.nav-list-social{
     text-align: center;
     margin-left: 12px;
+    height: 1.5rem;
+    overflow: hidden;
 }
 .nav-list-social li{
     position: relative;
@@ -128,10 +119,6 @@ ol{
     color: var(--color-secundary);
     list-style-type: decimal-leading-zero;
 }
-.nav-ol-list a:hover{
-    color: var(--color-secundary);
-    transition: 0.5s;
-}
 ul{
     list-style: none;
     display: flex;
@@ -142,7 +129,10 @@ ul > li{
     margin-right: 20px;
 }
 /* menu mobile */
-/* --------------------------------------*/
+.btn-mobile-menu{
+    display: none;
+}
+/* menu mobile*/
 .big-heading{
     color: transparent;
     font-size: 80px;
@@ -394,44 +384,18 @@ footer{
         font-size: 30px;
     }  
     .nav-list{
-        position: fixed;
-        z-index: 1000;
-        --gap: 6em;
-        inset: 0 0 0 30%;
-        flex-direction: column;
-        padding: min(30vh, 10rem) 2em;
-        background: hsl(0, 0%, 100%, 0.1);
-        backdrop-filter: blur(1rem);
-        transform: translateX(100%);
-    }
-    .nav-list ol > li{
-        font-size: 1.3em;
-    }
-    .nav-list .nav-ol-list{
-        flex-direction: column;
-    }
-    .nav-list [data-visible="true"]{
-        transform: translateX(0%);
-    }
-    .toggle{
-        position: relative;
-        width: 80px;
-        height: 80px;
-        z-index: 9999;
-        background: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        overflow: hidden;
-    }
-    .toggle span{
+        display: block;
+        width: 80%;
+        height: 100vh;
         position: absolute;
+        top: 30px;
+        right: 0;
+        background: #fabd21;
+    }
+    .line{
+        display: block;
+        border-top: 2px solid red;
         width: 40px;
-        height: 4px;
-        border-radius: 5px;
-        background: var(--back-yellow-light);
-        transition: 0.5s;
     }
     .toggle span:nth-child(1){
         transform: translateY(-15px);
@@ -485,24 +449,25 @@ footer{
         font-size: 20px;
     }
     .nav-list{
-        position: fixed;
-        z-index: 1000;
-        --gap: 6em;
-        inset: 0 0 0 30%;
-        flex-direction: column;
-        padding: min(30vh, 10rem) 2em;
-        background: hsl(0, 0%, 100%, 0.1);
-        backdrop-filter: blur(1rem);
-        transform: translateX(100%);
+        display: none;
+        width: 80%;
+        height: 100vh;
+        position: absolute;
+        top: 50px;
+        right: 0;
+        background: #fabd21;
+        overflow-y: hidden;
     }
-    .nav-list ol > li{
-        font-size: 1.3em;
+    .line{
+        display: block;
+        border-top: 2px solid red;
+        width: 40px;
     }
-    .nav-list .nav-ol-list{
-        flex-direction: column;
-    }
-    .nav-list [data-visible="true"]{
-        transform: translateX(0%);
+    .btn-mobile-menu{
+        display: block;
+        padding: 0.5rem 1rem;
+        border: none;
+        background: none;
     }
     .toggle{
         position: relative;
