--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,6 +368,14 @@ ul > li{
     position: absolute;
     top: 10%;
 }
+.btn-scroll{ 
+    position: fixed;
+    right: 30px;
+    bottom: 50px;
+}
+#scroll-top{
+    scroll-behavior: smooth;
+}
 /* rodapé */
 footer{
     height: 15vh;
@@ -379,6 +387,79 @@ footer{
     }
     header{
         overflow: visible;
+    }
+    #menu-toggle{
+        position: fixed;
+        inset: 0 0 0 30%;
+        height: 100vh;
+        background: var(--color-primary);
+        backdrop-filter: 25px;
+        -webkit-backdrop-filter: blur(25px);
+        transform: translateX(100%);
+        transition: transform 350ms ease-in-out;
+        z-index: 13;
+        overflow-x: none;
+    }
+    #menu-toggle[data-visible="true"]{
+        transform: translateX(0%);
+    }
+    #menu-toggle .nav-list{
+        padding: 50% 0;
+    }
+    .nav-list, .nav-ol-list{
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .nav-ol-list li{
+        margin: 15px 0;
+    }
+    .btn-mobile{
+        display: block;
+        position: absolute;
+        right: 2rem;
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        border: none;
+        background: none;
+        cursor: pointer;
+        gap: .5rem;
+        z-index: 14;
+    }
+    .line{
+        display: block;
+        border-top: 3px solid var(--back-yellow-light);
+        width: 40px;
+        height: 40px;
+        z-index: 15;
+        transition: .5s;
+    }
+    .line::after{
+        width: 20px;
+    }
+    .line::before{
+        width: 40px;
+    }
+    .line::after, .line::before{
+        content: '';
+        display: block;
+        border-top: 3px solid var(--back-yellow-light);
+        height: 2px;
+        margin-top: 9px;
+        transition: .5s;
+        position: relative;
+    }
+    .btn-mobile[aria-expanded ='true'] > .line{
+        border-top-color: transparent;
+        transform: translateX(15px);
+    }
+    .btn-mobile[aria-expanded ='true'] > .line::before{
+        transform: translateY(12px) rotate(495deg);
+    }
+    .btn-mobile[aria-expanded ='true'] > .line::after{
+        width: 40px;
+        transform: rotate(-495deg);
+      
     }
     .big-heading{
         font-size: 30px;
