--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,7 +482,7 @@ footer{
         flex-direction: row;
     }
 }
-@media (max-width: 35em){
+@media (max-width: 560px){
     main{
         padding: 0;
     }
@@ -491,15 +491,15 @@ footer{
     }
     #menu-toggle{
         position: fixed;
-        inset: 0 0 0 30%;
+        inset: 0 0 0 0;
         height: 100vh;
-        background: var(--color-primary);
+        background: rgba(23, 23, 23, 0.932);
         backdrop-filter: 25px;
         -webkit-backdrop-filter: blur(25px);
         transform: translateX(100%);
         transition: transform 350ms ease-in-out;
         z-index: 13;
-        overflow-x: none;
+        overflow-x: hidden;
     }
     #menu-toggle[data-visible="true"]{
         transform: translateX(0%);
