--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,10 @@ p{
     color: var(--text-color-light);
 }
 body{
-    color: var(--text-color);
-    font-family: 'Abel', sans-serif;
     width: 100%;
     height: 100%;
+    color: var(--text-color);
+    font-family: 'Abel', sans-serif;
     background: var(--color-primary);
     overflow-x: hidden;
 }
@@ -354,6 +354,53 @@ ul > li{
 #scroll-top{
     scroll-behavior: smooth;
 }
+/* animação do cursor */
+.cursor{
+    width: 30px;
+    height: 30px;
+    border: 2px solid var(--color-secundary);
+    border-radius: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    transition: 200ms;
+    transition-timing-function: ease-out;
+    animation: cursoranimado .5s infinite alternate;
+    pointer-events: none;
+    z-index: 1000;
+}
+
+@keyframes cursoranimado {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(.7);
+    }
+}
+
+.cursor::after{
+    content: '';
+    width: 30px;
+    height: 30px;
+    position: fixed;
+    top: -2px;
+    left: -2px;
+    border: 8px solid var(--color-secundary);
+    border-radius: 50%;
+    opacity: .7;
+    animation: cursoranimado2 .5s infinite alternate;
+}
+
+@keyframes cursoranimado2 {
+    
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(.4);
+    }
+}
+
 /* rodapé */
 footer{
     height: 15vh;
@@ -542,9 +589,6 @@ footer{
     }
     .big-heading{
         font-size: 20px;
-    }
-    .about-coluna{
-        display: ;
     }
     #main{
         margin-bottom: 40%;
