--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,27 +31,17 @@ main{
     padding: 0px 100px;
 }
 /* Barra de rolagem */
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 8px;
-    height: 8px;
-    background:var(--color-primary);
 }
-body::-webkit-scrollbar-button {
-    border: 1px var(--color-secundary);
+
+::-webkit-scrollbar-track {
+background-color: #fabc2111;
 }
-body::-webkit-scrollbar-track {
-    background: var(--color-primary);
-}
-body::-webkit-scrollbar-track-piece {
-    background: var(--color-primary);
-}
-body::-webkit-scrollbar-thumb {
-    background: #fabd21;
-    border-radius: 5px;
-}
-body::-webkit-scrollbar-corner {
-    background: var(--color-primary);
-    border-radius: 5px;
+
+::-webkit-scrollbar-thumb {
+background-color: #fabd21;
+border-radius: 8px;
 }
 a{
     color: var(--text-color);
@@ -71,9 +61,11 @@ header{
     left: 0;
     z-index: 999;
     overflow: hidden;
-    background: rgba(255, 255, 255, 0);
     backdrop-filter: blur(0.9em);
     -webkit-backdrop-filter: blur(0.9em);
+    background: rgba(255, 255, 255, 0);
+    backdrop-filter: blur(24px);
+    -webkit-backdrop-filter: blur(24px);
 }
 .logo{
     height: 60px;
@@ -152,10 +144,10 @@ ul > li{
     margin-top: 10%;
 }
 /* sections */
-#main, #about, #works{
-    margin-bottom: 20%;
-    height: auto;
-}
+#works, #service-area, #skills-area, #about, #works{
+    margin: 60px 0;
+    padding: 30px 0px;
+} 
 .about-me{
     width: 600px;
 }
@@ -235,17 +227,29 @@ ul > li{
 .content-columns{
     display: flex;
     flex-direction: row-reverse;
-    position: relative;
+    justify-content: center;
+    align-items: center;
 }
 .content-columns .colunas{
     width: 600px;
+    position: relative;
 }
 .content-columns .colunas p{
+    padding: 20px;
     position: absolute;
+    margin: 0;
     top: 50%;
-    left: 69%;
+    left: 50%;
+    margin-right: -50%;
     transform: translate(-50%, -50%);
-    letter-spacing: normal;
+}
+.content-columns .colunas:nth-child(1){
+    width: 600px;
+    height: 300px;
+    -webkit-box-shadow: inset 4px 4px 13px 8px #00000031; 
+    box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.336);
+    border-radius: 10px;
+    background: var(--cor-base);
 }
 .img-user{
     width: 300px;
@@ -305,10 +309,6 @@ ul > li{
     height: 300px;
 }
 /* projetos */
-#works, #service-area, #skills-area{
-    margin: 60px 0px;
-    padding: 100px 0px;
-}
 .containerMax{
     display: flex;
     align-items: center;
@@ -323,6 +323,8 @@ ul > li{
     border-radius: 5px;
     flex-basis: calc(33% -20px);
     background: var(--cor-base);
+    display: flex;
+    flex-direction: column;
 }
 .title-project{
     font-size: 18px;
@@ -416,7 +418,7 @@ footer .rodape-layout{
     align-items: center;
     justify-content: space-between;
 }
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 885px){
     main{
         padding: 30px;
     }
@@ -502,8 +504,8 @@ footer .rodape-layout{
     #main{
         margin-top: 30%;
     }
-    .project-body{
-        width: 100%;
+    .project-body, .box-service{
+        width: 320px;
         margin-right: 0px;
         display: flex;
         align-items: center;
@@ -516,7 +518,7 @@ footer .rodape-layout{
         flex-direction: column;
     }
 }
-@media (max-width: 560px){
+@media (max-width: 726px){
     main{
         padding: 0;
     }
@@ -609,16 +611,120 @@ footer .rodape-layout{
         justify-content: center;
         flex-direction: column;
     }
+    .content-columns .colunas:nth-child(1), .containerMax .box-service, .project-body{
+        width: 450px;
+    }
     .profile-foto{
         width: 200px;
         height: 200px;
     }
-    .project-body{
-        width: 90%;
-        margin-right: 0px;
+    footer .rodape-layout{
+        font-size: 14pt;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column-reverse;
+    }
+}
+@media (max-width: 526px){
+    main{
+        padding: 0;
+    }
+    header{
+        overflow: visible;  
+    }
+    #menu-toggle{
+        position: fixed;
+        inset: 0 0 0 0;
+        height: 100vh;
+        background: rgba(23, 23, 23, 0.932);
+        backdrop-filter: 25px;
+        -webkit-backdrop-filter: blur(25px);
+        transform: translateX(100%);
+        transition: transform 350ms ease-in-out;
+        z-index: 13;
+        overflow-x: hidden;
+    }
+    #menu-toggle[data-visible="true"]{
+        transform: translateX(0%);
+    }
+    #menu-toggle .nav-list{
+        padding: 50% 0;
+    }
+    .nav-list, .nav-ol-list{
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .nav-ol-list li{
+        margin: 15px 0;
+    }
+    .btn-mobile{
         display: block;
-        margin-left: auto;
-        margin-right: auto;
+        position: absolute;
+        right: 2rem;
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        border: none;
+        background: none;
+        cursor: pointer;
+        gap: .5rem;
+        z-index: 14;
+    }
+    .line{
+        display: block;
+        border-top: 3px solid var(--back-yellow-light);
+        width: 40px;
+        height: 40px;
+        z-index: 15;
+        transition: .5s;
+    }
+    .line::after{
+        width: 20px;
+    }
+    .line::before{
+        width: 40px;
+    }
+    .line::after, .line::before{
+        content: '';
+        display: block;
+        border-top: 3px solid var(--back-yellow-light);
+        height: 2px;
+        margin-top: 9px;
+        transition: .5s;
+        position: relative;
+    }
+    .btn-mobile[aria-expanded ='true'] > .line{
+        border-top-color: transparent;
+        transform: translateX(15px);
+    }
+    .btn-mobile[aria-expanded ='true'] > .line::before{
+        transform: translateY(12px) rotate(495deg);
+    }
+    .btn-mobile[aria-expanded ='true'] > .line::after{
+        width: 40px;
+        transform: rotate(-495deg);
+      
+    }
+    .big-heading{
+        font-size: 20px;
+    }
+    #main{
+        margin-bottom: 40%;
+        height: auto;
+    }
+    .content-columns{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .content-columns .colunas:nth-child(1), .containerMax .box-service, .project-body{
+        width: 450px;
+    }
+    .profile-foto{
+        width: 200px;
+        height: 200px;
     }
     footer .rodape-layout{
         font-size: 14pt;
