--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body{
     width: 100%;
     height: 100%;
     color: var(--text-color);
-    font-family: 'Abel', sans-serif;
+    font-family: 'Inter','Abel', sans-serif;
     background: var(--color-primary);
     overflow-x: hidden;
 }
@@ -73,6 +73,7 @@ header{
 .nav-list{
     position: relative;
     top: 6px;
+    padding: 0 20px;
 }
 .nav-list, .nav-ol-list{
     display: flex;
@@ -82,12 +83,12 @@ header{
     transition: 0.5s;
 }
 .nav-ol-list li{
-    margin-left: 30px;
+    margin-left: 40px;
 }
 /* animate icon */
 .nav-list-social{
     text-align: center;
-    margin-left: 12px;
+    margin-left: 25px;
     height: 1.5rem;
     overflow: hidden;
 }
@@ -127,7 +128,7 @@ ul > li{
 /* menu mobile*/
 .big-heading{
     color: transparent;
-    font-size: 70px;
+    font-size: 60px;
     white-space: nowrap;
     -webkit-text-stroke: 1px var(--text-color);
     background: url(/vendor/back.png);
@@ -144,7 +145,7 @@ ul > li{
     margin-top: 10%;
 }
 /* sections */
-#works, #service-area, #skills-area, #about, #main{
+#works, #service-area, #skills-area, #about, #main, #contact-area{
     margin: 60px 0;
     padding: 30px 0px;
 } 
@@ -224,9 +225,9 @@ ul > li{
     position: relative;
     z-index: 2;
 }
-.btn-links-project{
+.arquivo{
     font-size: 16px;
-    margin: 35px 0;
+    margin: 45px;
 }
 .content-columns{
     display: flex;
@@ -282,10 +283,7 @@ ul > li{
     max-width: 90%;
     width: 730px;
     height: 380px;
-    margin: 80px auto;
-    border-radius: 5px;
-    box-shadow: 1px 8px 15px rgba(0, 0, 0, 0.336);
-    background: var(--cor-base);
+    margin: 20px auto;
 }
 .box-skills{
     display: flex;
@@ -295,18 +293,23 @@ ul > li{
     width: auto;
     height: 300px;
     margin: 0px 15px;
+    border-left: 3px solid #fabc2111;
 }
 .btn-skills{
     color: var(--text-color);
     width: 130px;
     height: 45px;
     padding: 5px;
+    margin-left: -2px;
     border: none;
     background: transparent;
 }
+.btn-skills:hover{
+    transition: 0.3s ease;
+    background: #fabc2111;
+}
 .btn-skills:nth-child(1).active{
-    border-radius: 3px;
-    background: var(--color-primary);
+    border-left: 2px solid rgba(250, 188, 33, 0.562);
 }
 .inform-skills{
     width: 300px;
@@ -414,7 +417,6 @@ ul > li{
 
 /* rodapé */
 footer{
-    border-top: 1px solid #fabc2198;
     padding: 30px;
     text-align: center;
 }
@@ -508,6 +510,27 @@ footer .rodape-layout{
     }  
     #main{
         margin-top: 30%;
+    }
+    .box-skills{
+        padding: 0 25px;
+        border-left: none;
+    }
+    .box-skills .btn-skills{
+        width: 100px;
+    }
+    .btn-skills:nth-child(1).active{
+        border-left: none;
+    }
+    .btn-skills:nth-child(1).active{
+        border-bottom: 2px solid rgba(250, 188, 33, 0.562);
+    }
+    .skills-content{
+        display: flex;
+        flex-direction: column;
+    }
+    .skills-content .box-skills{
+        display: flex;
+        flex-direction: row;
     }
     .project-body, .box-service{
         width: 320px;
@@ -621,6 +644,14 @@ footer .rodape-layout{
     .content-columns .colunas:nth-child(1), .containerMax .box-service, .project-body{
         width: 450px;
     }
+    .skills-content{
+        display: flex;
+        flex-direction: column;
+    }
+    .skills-content .box-skills{
+        display: flex;
+        flex-direction: row;
+    }
     .project-body{
         display: flex;
         flex-direction: column;
@@ -732,6 +763,15 @@ footer .rodape-layout{
     }
     .content-columns .colunas:nth-child(1), .containerMax .box-service, .project-body{
         width: 450px;
+    }
+    .skills-content{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .skills-content .box-skills{
+        display: flex;
+        flex-direction: row;
     }
     .project-body{
         display: flex;
