--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+@import url('https://fonts.googleapis.com/css2? family= Abel & family= Inter:wght@300 & display=swap');
 *{
     padding: 0;
     margin: 0;
