--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
     background: rgba(250, 188, 33, 0.178);
 }
 p{
-    font-size: 19px;
+    font-size: 18px;
     color: var(--text-color-light);
 }
 body{
@@ -297,6 +297,7 @@ ul > li{
 }
 .btn-skills{
     color: var(--text-color);
+    font-size: 14px;
     width: 130px;
     height: 45px;
     padding: 5px;
@@ -309,11 +310,18 @@ ul > li{
     background: #fabc2111;
 }
 .btn-skills:nth-child(1).active{
-    border-left: 2px solid rgba(250, 188, 33, 0.562);
+    border-left: 2px solid #fabd21;
 }
 .inform-skills{
     width: 300px;
     height: 300px;
+}
+.inform-skill span{
+    color: #fabd21;
+    font-size: medium;
+}
+.inform-skill .text-informa{
+    font-size: 14px;
 }
 /* projetos */
 .containerMax{
@@ -629,7 +637,7 @@ footer .rodape-layout{
       
     }
     .big-heading{
-        font-size: 20px;
+        font-size: 35px;
     }
     #main{
         margin-bottom: 40%;
@@ -749,7 +757,7 @@ footer .rodape-layout{
       
     }
     .big-heading{
-        font-size: 20px;
+        font-size: 35px;
     }
     #main{
         margin-bottom: 40%;
